MIDletLoader: Change how URLs are created.
Creating directly from strings is deprecated from Java 9 onwards,
so do it proper.